[package]
name = "rsguid"
version = "0.1.0"
authors = ["oujianxin <oujianxin@escopetech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "rsguid"
path = "src/main.rs"

[dependencies]
libc = "0.2"
uuid = { version = "0.4", features = ["serde", "v4"] }
